[build-system]
requires = ["setuptools>=74", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

# The version number will be 0.0.0, as of 16/01-24 using setuptools_scm result
# in all files under git control being included in the wheel (unless excluded
# in Manifest.in) maybe this will change or one of the other build backends
# will support dynamic version from git.
[project]
name = "brundle"
authors = [
    {name= 'Janus Heide', email = "janusheide@gmail.com"}
]
description = "Run various linters if they are installed."
dynamic = ["version"]
readme = "README.rst"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

keywords=["maintenance", "utility"]

dependencies = [
]

[project.optional-dependencies]
linters = [
    "isort==5.13.2",
    "licensecheck==2024.3",
    "mypy==1.11.2",
    "ruff==0.6.8",
]
test = [
    "brundle[linters]",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
]
dev = [
    "brundle[test]",
    "uppd==0.3.0",
    "bouillon==2.1.0",
    "build==1.2.2",
    "semver==3.0.2",
    "twine==5.1.1",
]

[project.urls]
Homepage = "https://github.com/janusheide/brundle"
Repository = "https://github.com/janusheide/brundle"
Changelog = "https://github.com/janusheide/brundle/blob/main/NEWS.rst"

[project.scripts]
brundle = "brundle.brundle:main_cli"

[tool.coverage.report]
show_missing = true

[tool.isort]
multi_line_output = 5
include_trailing_comma = "True"

[tool.licensecheck]
using = "PEP631:test;dev"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
addopts = "--cov=brundle -vv --cov-report term-missing --cov-fail-under=75"

[tool.mypy]
exclude = ["build", "boil.py",]

[tool.setuptools_scm]
