[build-system]
requires = ["setuptools>=74", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

# The version number will be 0.0.0, as of 16/01-24 using setuptools_scm result
# in all files under git control being included in the wheel (unless excluded
# in Manifest.in) maybe this will change or one of the other build backends
# will support dynamic version from git.
[project]
name = "brundle"
authors = [
    {name= 'Janus Heide', email = "janusheide@gmail.com"}
]
description = "Run various linters if they are installed."
dynamic = ["version"]
readme = "README.rst"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]

keywords=["maintenance", "utility"]

dependencies = [
]

[project.optional-dependencies]
linters = [
    "isort==5.13.2",
    "mypy==1.13.0",
    "ruff==0.7.1",
]
test = [
    "brundle[linters]",
    "dlister==0.1.0",
    "pytest==8.3.3",
    "pytest-cov<=6.0.0,>=5.0.0",
]
dev = [
    "brundle[test]",
    "bouillon==2.6.0",
    "build==1.2.2.post1",
    "licensecheck==2024.3",
    "twine==5.1.1",
    "uppd==1.3.0",
]

[project.urls]
Homepage = "https://github.com/janusheide/brundle"
Repository = "https://github.com/janusheide/brundle"
Changelog = "https://github.com/janusheide/brundle/blob/main/NEWS.rst"

[project.scripts]
brundle = "brundle.brundle:main_cli"

[tool.coverage.report]
show_missing = true
fail_under = 75

[tool.isort]
multi_line_output = 5
include_trailing_comma = "True"

[tool.licensecheck]
using = "PEP631:test;dev"

[tool.pytest.ini_options]
addopts = "--cov=brundle -vv"

[tool.mypy]
exclude = ["build"]

[tool.setuptools_scm]
